fix: disabled horizontal scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,11 @@
     background-position: center;
     background-size: cover;
 }
+.no-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, and Opera */
+}
+.no-scrollbar {
+    overflow: auto;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;     /* Firefox */
+}
